feat: Add create character feature and connected to db.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,8 +84,10 @@
 .character-form {
     display: none;
     position: fixed;
-    bottom: 34em;
-    left: 10em;
+    background-color: white;
+    width: 85%;
+    bottom: 3em;
+    left: 11em;
     border: 3px solid #f1f1f1;
     z-index: 9;
 }
