--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    z-index: -1;
 }
 
 .writersdesk img {
@@ -72,17 +73,37 @@
 }
 
 .testdiv {
-    border: 5px solid #0f3b57;
+    
     position: fixed;
     z-index: 1;
     top: 5em;
     left: 10em;
     width: 87%;
     height: 87%;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+/*     display: grid;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: character character character;
+    grid-template-areas: 
+        'new character character'
+        'character character character'
+        'character character character'; */
+}
+
+.characterBox {
+    position: fixed;
+    z-index: 3;
+    top: 8em;
+    left: 10em;
+    width: 87%;
+    height: 80%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+
+        
+      
 }
 
 .character-form {
@@ -98,9 +119,48 @@
 
 .characterPost {
     margin: 1vw;
-    grid-area: character;
-    float: left;
-    border: 5px solid #0f3b57;
-    z-index: 2;
+    width: 15em;
+    height: 12em;
+    background-image: url(../src/paper.png);
+    box-shadow: 10px 10px 5px;
+    padding: 1em;
+    
+}
+
+.characterPost a {
+    text-decoration: none;
+    color: black;
+    z-index: -1;
+}
+
+.open-button {
+    z-index: 4;
+}
+
+.characterProfile {
+    position: fixed;
+    border:5px solid #0f3b57;
     background-color: white;
+    z-index: 5;
+    top: 5em;
+    left: 10em;
+    width: 87%;
+    height: 87%;
+}
+
+.characterProfileBox {
+    z-index: 6;
+    border: 5px solid #0f3b57;
+    background-color: white;
+}
+
+.openProfile {
+    z-index: 6;
+    border: 5px solid #0f3b57;
+    background-color: white;
+    position: fixed;
+    top: 5em;
+    left: 10em;
+    width: 87%;
+    height: 87%;
 }
