--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,7 +120,7 @@
 .characterPost {
     margin: 1vw;
     width: 15em;
-    height: 12em;
+    height: 15em;
     background-image: url(../src/paper.png);
     box-shadow: 10px 10px 5px;
     padding: 1em;
@@ -150,8 +150,9 @@
 
 .characterProfileBox {
     z-index: 6;
-    border: 5px solid #0f3b57;
-    background-color: white;
+    background-image: url(../src/paper2.png);
+    box-shadow: 10px 10px 5px;
+    padding: 1em;
 }
 
 .openProfile {
@@ -163,4 +164,72 @@
     left: 10em;
     width: 87%;
     height: 87%;
+}
+
+.setting-form {
+    display: none;
+    position: fixed;
+    background-color: white;
+    width: 85%;
+    bottom: 3em;
+    left: 11em;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+}
+
+.settingBox {
+    position: fixed;
+    z-index: 3;
+    top: 8em;
+    left: 10em;
+    width: 87%;
+    height: 80%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+
+        
+      
+}
+.settingPost {
+    margin: 1vw;
+    width: 15em;
+    height: 12em;
+    background-image: url(../src/paper.png);
+    box-shadow: 10px 10px 5px;
+    padding: 1em;
+    
+}
+
+.settingPost a {
+    text-decoration: none;
+    color: black;
+    z-index: -1;
+}
+.settingProfile {
+    position: fixed;
+    border:5px solid #0f3b57;
+    background-color: white;
+    z-index: 5;
+    top: 5em;
+    left: 10em;
+    width: 87%;
+    height: 87%;
+}
+
+.settingProfileBox {
+    z-index: 6;
+    background-image: url(../src/paper2.png);
+    box-shadow: 10px 10px 5px;
+    padding: 1em;
+}
+
+.icons {
+    
+    bottom: 0;
+    right: 0;
+    
+
 }
