--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,271 +1,276 @@
-.App {
-    margin:0%;
-    padding: 0%;
-    background-color: white;
-}
-
-.navbar-custom {
-    background-color: #0f3b57;
-    position: fixed;
-    width: 100%;
-}
-
-.Workspace {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    gap: 17px;
-    grid-template-areas: "sidebar writersdesk";
-    margin: 0px;
-    padding: 0px;
-}
-
-.sidebar {
-    grid-area: sidebar;
-    position: fixed;
-    top: 55px;
-    border: 5px solid #0f3b57;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    left:0%;
-    background-color: white;
-}
-
-.writersdesk {
-    grid-area: writersdesk;
-    position: fixed;
-    top: 55px;
-    right: 0px;
-    border: 5px solid #0f3b57;
-    height: 92.5%;
-    width: 91.5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    z-index: -1;
-}
-
-.writersdesk img {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
-    
- 
-}
 
 
-.icon {
-    width: 75px;
-    height: 75px
-}
 
-.toolbox {
-    list-style-type: none;
-    justify-content: center;
-    
-}
+@media (min-width: 600px) {
+   .App {
+        margin:0%;
+        padding: 0%;
+        background-color: white;
+    }
 
-.iconlist {
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-right: 1em;
-    
-}
+    .navbar-custom {
+        background-color: #0f3b57;
+        position: fixed;
+        width: 100%;
+    }
 
-.testdiv {
-    
-    position: fixed;
-    z-index: 1;
-    top: 5em;
-    left: 10em;
-    width: 87%;
-    height: 87%;
-/*     display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-        'new character character'
-        'character character character'
-        'character character character'; */
-}
+    .Workspace {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        gap: 17px;
+        grid-template-areas: "sidebar writersdesk";
+        margin: 0px;
+        padding: 0px;
+    }
 
-.characterBox {
-    position: fixed;
-    z-index: 3;
-    top: 8em;
-    left: 10em;
-    width: 87%;
-    height: 80%;
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-around;
+    .sidebar {
+        grid-area: sidebar;
+        position: fixed;
+        top: 55px;
+        border: 5px solid #0f3b57;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        left:0%;
+        background-color: white;
+    }
 
+    .writersdesk {
+        grid-area: writersdesk;
+        position: fixed;
+        top: 55px;
+        right: 0px;
+        border: 5px solid #0f3b57;
+        height: 92.5%;
+        width: 91.5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        z-index: -1;
+    }
+
+    .writersdesk img {
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%;
         
-      
-}
-
-.character-form {
-    display: none;
-    position: fixed;
-    background-color: white;
-    width: 85%;
-    bottom: 3em;
-    left: 11em;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-    background-image: url(../src/paper2.png);
-    box-shadow: 10px 10px 5px;
-}
-
-.characterEdit-form {
     
-    position: fixed;
-    background-color: white;
-    width: 85%;
-    bottom: 3em;
-    left: 11em;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-    overflow-y: auto;
-    background-image: url(../src/paper2.png);
-    box-shadow: 10px 10px 5px;
-}
+    }
 
-.settingEdit-form {
-    position: fixed;
-    background-color: white;
-    width: 85%;
-    bottom: 3em;
-    left: 11em;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-    overflow-y: auto;
-    background-image: url(../src/paper2.png);
-    box-shadow: 10px 10px 5px;
-    
-}
 
-.characterPost {
-    margin: 1vw;
-    width: 15em;
-    height: 15em;
-    background-image: url(../src/paper.png);
-    box-shadow: 10px 10px 5px;
-    padding: 1em;
-    
-}
+    .icon {
+        width: 75px;
+        height: 75px
+    }
 
-.characterPost a {
-    text-decoration: none;
-    color: black;
-    z-index: -1;
-}
-
-.open-button {
-    z-index: 4;
-}
-
-.characterProfile {
-    position: fixed;
-    border:5px solid #0f3b57;
-    background-color: white;
-    z-index: 5;
-    top: 5em;
-    left: 10em;
-    width: 87%;
-    height: 87%;
-    overflow-y: auto;
-}
-
-.characterProfileBox {
-    z-index: 6;
-    background-image: url(../src/paper2.png);
-    box-shadow: 10px 10px 5px;
-    padding: 1em;
-}
-
-.openProfile {
-    z-index: 6;
-    border: 5px solid #0f3b57;
-    background-color: white;
-    position: fixed;
-    top: 5em;
-    left: 10em;
-    width: 87%;
-    height: 87%;
-}
-
-.setting-form {
-    display: none;
-    position: fixed;
-    background-color: white;
-    width: 85%;
-    bottom: 3em;
-    left: 11em;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-}
-
-.settingBox {
-    position: fixed;
-    z-index: 3;
-    top: 8em;
-    left: 10em;
-    width: 87%;
-    height: 80%;
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-around;
-
+    .toolbox {
+        list-style-type: none;
+        justify-content: center;
         
-      
-}
-.settingPost {
-    margin: 1vw;
-    width: 15em;
-    height: 12em;
-    background-image: url(../src/paper.png);
-    box-shadow: 10px 10px 5px;
-    padding: 1em;
-    
-}
+    }
 
-.settingPost a {
-    text-decoration: none;
-    color: black;
-    z-index: -1;
-}
-.settingProfile {
-    position: fixed;
-    border:5px solid #0f3b57;
-    background-color: white;
-    z-index: 5;
-    top: 5em;
-    left: 10em;
-    width: 87%;
-    height: 87%;
-}
+    .iconlist {
+        padding-top: 1em;
+        padding-bottom: 1em;
+        padding-right: 1em;
+        
+    }
 
-.settingProfileBox {
-    z-index: 6;
-    background-image: url(../src/paper2.png);
-    box-shadow: 10px 10px 5px;
-    padding: 1em;
-}
+    .testdiv {
+        
+        position: fixed;
+        z-index: 1;
+        top: 5em;
+        left: 10em;
+        width: 87%;
+        height: 87%;
+    /*     display: grid;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: 
+            'new character character'
+            'character character character'
+            'character character character'; */
+    }
 
-.icons {
-    
-    bottom: 0;
-    right: 0;
-    
+    .characterBox {
+        position: fixed;
+        z-index: 3;
+        top: 8em;
+        left: 10em;
+        width: 87%;
+        height: 80%;
+        display: inline-flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: space-around;
 
-}
+            
+        
+    }
 
-.xbutton {
-    position: relative;
-    float: right;
+    .character-form {
+        display: none;
+        position: fixed;
+        background-color: white;
+        width: 85%;
+        bottom: 3em;
+        left: 11em;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+        background-image: url(../src/paper2.png);
+        box-shadow: 10px 10px 5px;
+    }
+
+    .characterEdit-form {
+        
+        position: fixed;
+        background-color: white;
+        width: 85%;
+        bottom: 3em;
+        left: 11em;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+        overflow-y: auto;
+        background-image: url(../src/paper2.png);
+        box-shadow: 10px 10px 5px;
+    }
+
+    .settingEdit-form {
+        position: fixed;
+        background-color: white;
+        width: 85%;
+        bottom: 3em;
+        left: 11em;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+        overflow-y: auto;
+        background-image: url(../src/paper2.png);
+        box-shadow: 10px 10px 5px;
+        
+    }
+
+    .characterPost {
+        margin: 1vw;
+        width: 15em;
+        height: 15em;
+        background-image: url(../src/paper.png);
+        box-shadow: 10px 10px 5px;
+        padding: 1em;
+        
+    }
+
+    .characterPost a {
+        text-decoration: none;
+        color: black;
+        z-index: -1;
+    }
+
+    .open-button {
+        z-index: 4;
+    }
+
+    .characterProfile {
+        position: fixed;
+        border:5px solid #0f3b57;
+        background-color: white;
+        z-index: 5;
+        top: 5em;
+        left: 10em;
+        width: 87%;
+        height: 87%;
+        overflow-y: auto;
+    }
+
+    .characterProfileBox {
+        z-index: 6;
+        background-image: url(../src/paper2.png);
+        box-shadow: 10px 10px 5px;
+        padding: 1em;
+    }
+
+    .openProfile {
+        z-index: 6;
+        border: 5px solid #0f3b57;
+        background-color: white;
+        position: fixed;
+        top: 5em;
+        left: 10em;
+        width: 87%;
+        height: 87%;
+    }
+
+    .setting-form {
+        display: none;
+        position: fixed;
+        background-color: white;
+        width: 85%;
+        bottom: 3em;
+        left: 11em;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+    }
+
+    .settingBox {
+        position: fixed;
+        z-index: 3;
+        top: 8em;
+        left: 10em;
+        width: 87%;
+        height: 80%;
+        display: inline-flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: space-around;
+
+            
+        
+    }
+    .settingPost {
+        margin: 1vw;
+        width: 15em;
+        height: 12em;
+        background-image: url(../src/paper.png);
+        box-shadow: 10px 10px 5px;
+        padding: 1em;
+        
+    }
+
+    .settingPost a {
+        text-decoration: none;
+        color: black;
+        z-index: -1;
+    }
+    .settingProfile {
+        position: fixed;
+        border:5px solid #0f3b57;
+        background-color: white;
+        z-index: 5;
+        top: 5em;
+        left: 10em;
+        width: 87%;
+        height: 87%;
+    }
+
+    .settingProfileBox {
+        z-index: 6;
+        background-image: url(../src/paper2.png);
+        box-shadow: 10px 10px 5px;
+        padding: 1em;
+    }
+
+    .icons {
+        
+        bottom: 0;
+        right: 0;
+        
+
+    }
+
+    .xbutton {
+        position: relative;
+        float: right;
+    }
 }
